fix: Slight layout tweak to open up the view a bit
- This is not permanent. It was just getting frustrating to work in a small space.

--- a/src/views/tax-calculator.scss
+++ b/src/views/tax-calculator.scss
@@ -24,7 +24,11 @@ h1 {
   display: flex;
   list-style: none;
   padding-left: 0;
+}
 
+#output-container,
+#input-container {
+  flex: 1;
 }
 
 .calculation-output {
